# Ramzi-SanitixPDF

./: .gitignore  ALL_DONE.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_WORKFLOW_FIX.md  GITHUB_ACTIONS_FIX.md  GITHUB_READY.md  GITHUB_REPO_GUIDE.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  RUN_APP_LOCALLY.md  SECURITY.md  app.py  config.py  duplicate_pdf_detector.py  package-lock.json  pyproject.toml  requirements.txt  run.sh  setup.py  start.sh  verify_setup.py  wsgi.py
.github/: ATTRIBUTION.md  PULL_REQUEST_TEMPLATE.md  README.md  REPOSITORY_STATUS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: npm-package-ci.yml  npm-package.yml  python-package.yml
docs/: ALL_DONE.md  CI_FIX_REQUIRED.md  CLEAN_STRUCTURE_COMPLETE.md  GITHUB_STRUCTURE.md  PRODUCTION_CHECKLIST.md  README.md  SHARE_PACKAGE.md  STRUCTURE_REORGANIZED.md  STRUCTURE_SUMMARY.md
docs/development/: GITHUB_READY.md  GITHUB_SETUP.md  PYTHON37_FIX.md  (+1 more)
npm-package/: .eslintrc.js  .eslintrc.json  .gitignore  .npmignore  .npmrc  ERRORS_FIXED.md  FIXED_SCOPE_ISSUE.md  MODERNIZATION_COMPLETE.md  NPM_2FA_SETUP.md  NPM_PACKAGE_SUMMARY.md  NPM_PUBLISH_GUIDE.md  PUBLISH_CHECKLIST.md  PUBLISH_NOW_FINAL.md  PUBLISH_SUCCESS.md  PUBLISH_WITH_2FA.md  PUBLISH_WITH_OTP.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.esm.config.js
scripts/: CREATE_RELEASE.sh  README.md
templates/: index.html
(+22 files in other folders)
