[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sanitixpdf"
version = "1.0.0"
description = "A professional platform for detecting and removing duplicate PDF files based on content comparison"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nisarga Lokhande"}
]
keywords = ["pdf", "duplicate", "detection", "content", "comparison", "file", "management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Office/Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nikobuddy/Ramzi-SanitixPDF"
Documentation = "https://github.com/nikobuddy/Ramzi-SanitixPDF#readme"
Repository = "https://github.com/nikobuddy/Ramzi-SanitixPDF"
"Bug Tracker" = "https://github.com/nikobuddy/Ramzi-SanitixPDF/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

